fix missing icons and spacing
adds the missing icons after migration to ext6

also fixes the spacing in the tree (without this,
the spacing of the dot background in the tree is not right)

and fixes the horizontal spacing of the icons in the dropdown menus

since the loading dots gif does not exist in this theme, i used
the loading circle which is shown everywhere else for the task loading
entry

--- a/www/css/ext6-pve.css
+++ b/www/css/ext6-pve.css
@@ -16,10 +16,200 @@
 
 /* reduce tree space */
 .x-grid-cell-inner-treecolumn { /* vertical padding */
-    padding: 4px 0px;
+    padding: 4px 0px 3px 0px;
 }
 
 /* horizontal distance between parent and child leaf */
 .x-tree-elbow-img {
     width: 14px;
 }
+
+/* adjust horizontal position of menu icons */
+.x-menu-item-icon-default {
+    left: 2px;
+}
+
+/* icons for tree/snapshots/menus/etc.. */
+.x-grid-row-loading {
+    background: no-repeat center center;
+    background-image:url(../ext6/theme-crisp/resources/images/loadmask/loading.gif);
+}
+
+.x-grid-row-console {
+    background: no-repeat center center;
+    background-image:url(../images/display.png);
+}
+
+.pve-itype-icon-virt-viewer,
+.pve-itype-icon-tigervnc,
+.pve-itype-icon-novnc,
+.pve-itype-icon-display,
+.pve-itype-icon-memory,
+.pve-itype-icon-processor,
+.pve-itype-icon-network,
+.pve-itype-icon-network-server,
+.pve-itype-icon-keyboard,
+.pve-itype-icon-cdrom,
+.pve-itype-icon-qemu,
+.pve-itype-icon-qemu-template,
+.pve-itype-icon-qemu-running,
+.pve-itype-icon-lxc,
+.pve-itype-icon-lxc-template,
+.pve-itype-icon-lxc-running,
+.pve-itype-icon-swap,
+.pve-itype-icon-node,
+.pve-itype-icon-node-running,
+.pve-itype-icon-storage,
+.pve-itype-icon-pool,
+.pve-itype-icon-itype
+{
+    background-repeat: no-repeat;
+    background-position:3px center;
+    padding-left: 20px;
+}
+
+.pve-itype-icon-qemu,
+.x-tree-node-computer,
+.x-grid-tree-node-expanded .x-tree-node-computer
+{
+    background-image:url(../images/computer.png);
+}
+
+.pve-itype-icon-qemu,
+.x-tree-node-computer,
+.x-grid-tree-node-expanded .x-tree-node-computer
+{
+    background-image:url(../images/computer.png);
+}
+
+.pve-itype-icon-qemu-running,
+.x-tree-node-computer-running,
+.x-grid-tree-node-expanded .x-tree-node-computer-running
+{
+    background-image:url(../images/computer-on.png);
+}
+
+.pve-itype-icon-qemu-template,
+.x-tree-node-computer-template,
+.x-grid-tree-node-expanded .x-tree-node-computer-template
+{
+    background-image:url(../images/computer-template.png);
+}
+
+.pve-itype-icon-lxc,
+.x-tree-node-lxc,
+.x-grid-tree-node-expanded .x-tree-node-lxc
+{
+    background-image:url(../images/lxc-off.png);
+}
+
+.pve-itype-icon-lxc-template,
+.x-tree-node-lxc-template,
+.x-grid-tree-node-expanded .x-tree-node-lxc-template
+{
+    background-image:url(../images/computer-template.png);
+}
+
+.pve-itype-icon-swap,
+.x-tree-node-lxc-swap,
+.x-grid-tree-node-expanded .x-tree-lxc-swap
+{
+    background-image:url(../images/swap.png);
+}
+
+.pve-itype-icon-lxc-running,
+.x-tree-node-lxc-running,
+.x-grid-tree-node-expanded .x-tree-node-lxc-running
+{
+    background-image:url(../images/lxc-on.png);
+}
+
+.pve-itype-icon-node,
+.x-tree-node-server,
+.x-grid-tree-node-expanded .x-tree-node-server
+{
+    background-image:url(../images/network-server-off.png);
+}
+
+.pve-itype-icon-node-running,
+.x-tree-node-server-running,
+.x-grid-tree-node-expanded .x-tree-node-server-running
+{
+    background-image:url(../images/network-server-on.png);
+}
+
+.pve-itype-icon-storage,
+.x-tree-node-harddisk,
+.x-grid-tree-node-expanded .x-tree-node-harddisk
+{
+    background-image:url(../images/drive-harddisk.png);
+}
+
+.x-tree-node-snapshot,
+.x-grid-tree-node-expanded .x-tree-node-snapshot
+{
+    background-image:url(../images/snapshot.png);
+}
+
+.pve-itype-icon-pool,
+.x-tree-node-pool,
+.x-grid-tree-node-expanded .x-tree-node-pool
+{
+    background-image:url(../images/connect_established.png);
+}
+
+.pve-itype-icon-itype
+{
+    background-image:url(../ext6/theme-classic/resources/images/tree/folder.gif);
+}
+
+.pve-itype-icon-network-server
+{
+    background-image:url(../images/network-server.png);
+}
+
+.pve-itype-icon-network
+{
+    background-image:url(../images/network.png);
+}
+
+.pve-itype-icon-keyboard
+{
+    background-image:url(../images/keyboard.png);
+}
+
+.pve-itype-icon-cdrom
+{
+    background-image:url(../images/cdrom.png);
+}
+
+.pve-itype-icon-memory
+{
+    background-image:url(../images/memory.png);
+}
+
+.pve-itype-icon-processor
+{
+    background-image:url(../images/processor.png);
+}
+
+.pve-itype-icon-display
+{
+    background-image:url(../images/display.png);
+}
+
+.pve-itype-icon-tigervnc
+{
+    background-image:url(../images/tigervnc.png);
+}
+
+.pve-itype-icon-novnc
+{
+    background-image:url(../images/novnc.png);
+}
+
+.pve-itype-icon-virt-viewer
+{
+    background-image:url(../images/virt-viewer.png);
+}
+
